--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "http": "0.0.1-security",
     "jquery": "^3.7.0",
     "socket.io": "^2.5.0"
+  },
+  "scripts": {
+    "start": "node index.js" 
   }
 }
